# Course-SysAdm

Labs/1/: vistarter-0.1.tgz  vistarter_0.1.orig.tar.xz
Labs/1/vistarter-0.1/: configure  configure.ac
Labs/1/vistarter-0.1/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
Labs/1/vistarter-0.1/debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  vistarter.cron.d.ex  vistarter.default.ex  vistarter.doc-base.EX  watch.ex
Labs/1/vistarter-0.1/src/: Makefile.am  Makefile.in  vistarter.c
Project-bak/: Vagrantfile  bootstrap.sh  hiera.yaml  puppet-modules.sh
Project-bak/.vagrant/machines/default/virtualbox/: action_provision  id  index_uuid
Project-bak/manifests/: default.pp
